fixing grid spacing

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,9 @@
     box-sizing: border-box;
 }
 
-
+html, body {
+    height: 100%;
+}
 
 body {
     
@@ -63,7 +65,6 @@ main {
     border-radius: 10px;
     color: whitesmoke;
     padding: 2rem;
-    margin: 2rem;
     opacity: 0.9;
     
     
@@ -97,6 +98,10 @@ main {
 }
 
 
+footer {
+    margin-top: auto;
+}
+
 /* Images */
 
 
@@ -108,12 +113,16 @@ main {
     border: 5px solid var(--purple-300);
 }
 
-
+@media (max-width: 767px) {
+    .card {
+        margin: 2rem;
+    }
+}
 
 @media (min-width: 767px) {
     main {
         display: grid;
-        
+        grid-gap:1rem;
         grid-template-areas: 
         "one one"
         "two three"
@@ -132,11 +141,13 @@ main {
     main {
        
         max-width: initial;
+        
         grid-template-areas: 
-        "one one two five"
-        "three four four five";
+        "one    one  two  five"
+        "three  four four five";
     }
 
-    
-    
+    .card {
+        max-height: initial;
+    }
 }
